--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,11 +13,9 @@ jobs:
         with: # We set all our secrets here for the action, these won't be shown in the action logs 
           host: ${{ secrets.HOST }} 
           username: ${{ secrets.USERNAME }} 
-          password: ${{ secrets.PASSWORD }} 
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }} 
           script: |
-            ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -t ${{ secrets.USERNAME }}@${{ secrets.HOST }} 'echo SSH command executed successfully'
             cd /Odoo/env/env15/addons/pipeline_test
             git pull origin master # we pull any changes from git
-            sudo -n systemctl stop odoo.service
-            sudo -n systemctl start odoo.service
+            sudo systemctl restart odoo
