--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,4 @@ jobs:
           script: |
             cd /Odoo/env/env15/addons/pipeline_test
             git pull origin master # we pull any changes from git
-            sudo systemctl restart odoo
+            systemctl restart odoo
