--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
             git pull origin master # we pull any changes from git
             systemctl stop odoo
             source /Odoo/env/env15/bin/activate
-            /Odoo/src/odoo/odoo-bin -c /Odoo/env/env15/config/env15.conf -i crm --stop-after-init
+            /Odoo/src/odoo/odoo-bin -c /Odoo/env/env15/config/env15.conf -i account --stop-after-init
             deactivate
             systemctl start odoo
 
