--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,9 @@ jobs:
           script: |
             cd /Odoo/env/newtest/addons/new_pipeline_test
             git pull origin master # we pull any changes from git
+            service odootest stop
             source /Odoo/env/newtest/bin/activate
-            /Odoo/src/odoo/odoo-bin -c /Odoo/env/newtest/config/new.conf -i account --stop-after-init
+            /Odoo/src/odoo/odoo-bin -c /Odoo/env/newtest/config/new.conf -i crm --stop-after-init
             deactivate
+            service odootest start
 
