--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         with: # We set all our secrets here for the action, these won't be shown in the action logs 
           host: ${{ secrets.HOST }} 
           username: ${{ secrets.USERNAME }} 
-          password: ${{ secrets.PASSWORD }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }} 
           script: |
             cd /Odoo/env/env15/addons/new_pipeline_test
