--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,12 +15,5 @@ jobs:
           username: ${{ secrets.USERNAME }} 
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }} 
-          script: |
-            cd /Odoo/env/env15/addons/new_pipeline_test
-            git pull origin master # we pull any changes from git
-            sudo systemctl stop odoo
-            source /Odoo/env/env15/bin/activate
-            /Odoo/src/odoo/odoo-bin -c /Odoo/env/env15/config/env15.conf -i account --stop-after-init
-            deactivate
-            sudo systemctl start odoo
+        run: sudo apt-get update
 
