--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,14 @@ jobs:
           username: ${{ secrets.USERNAME }} 
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }} 
-      - name: Export AWS profile       
-        run: sudo apt-get update
+          script: |
+            cd /Odoo/env/env15/addons/new_pipeline_test
+            git pull origin master # we pull any changes from git
+      - name: service stop and upgrade module       
+        run: |
+          sudo service odoo stop;
+          source /Odoo/env/env15/bin/activate;
+          /Odoo/src/odoo/odoo-bin -c /Odoo/env/env15/config/env15.conf -i account --stop-after-init;
+          deactivate
+          sudo service odoo start;
 
