--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,12 +15,13 @@ jobs:
           username: ${{ secrets.USERNAME }} 
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }} 
-          run: |
-            cd /Odoo/env/env15/addons/new_pipeline_test;
-            git pull origin master;
-            sudo service odoo stop;
-            source /Odoo/env/env15/bin/activate;
-            /Odoo/src/odoo/odoo-bin -c /Odoo/env/env15/config/env15.conf -i account --stop-after-init;
+          script: |
+            cd /Odoo/env/env15/addons/new_pipeline_test
+            git pull origin master
+          run: sudo service odoo stop
+          script: |
+            source /Odoo/env/env15/bin/activate
+            /Odoo/src/odoo/odoo-bin -c /Odoo/env/env15/config/env15.conf -i account --stop-after-init
             deactivate;
-            sudo service odoo start;
+          run: sudo service odoo start
 
