--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,4 @@ jobs:
           username: ${{ secrets.USERNAME }} 
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }} 
-          script: |
-            cd /Odoo/env/env15/addons/new_pipeline_test
-            git pull origin master
-          run: sudo service odoo stop
-          script: |
-            source /Odoo/env/env15/bin/activate
-            /Odoo/src/odoo/odoo-bin -c /Odoo/env/env15/config/env15.conf -i account --stop-after-init
-            deactivate;
-          run: sudo service odoo start
-
+          run: sudo service odoo restart
