--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,5 +15,6 @@ jobs:
           username: ${{ secrets.USERNAME }} 
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }} 
-          run: sudo service odoo restart
-          command_timeout: '5m'
+          script: |
+             chmod +x deploy.sh
+             ./deploy.sh
